# FunGP

./: .gitignore  README.md  pyproject.toml
fun_gp/: SMS.py  __init__.py  ccm.py  proactive_parser.py  reader.py  scp02.py  scp80.py  smart_card.py  sw_dict.py  uicc.py  utils.py
resources/: SimpleApplet.cap  known-simcards.json
tests/examples/: 01_install_applet.py  02_delete_applet.py  03_get_data_test.py
tests/sm_applet/: 01_install_applet.py  03_generate_shared.py  04_secret_exchange.py  05_test_has_cdata.py  ECDH.py
tests/smart_card/: 01_install_applet.py  02_delete_applet.py  02_get_data_test.py  03_get_data_scp02_test.py  04_simple_applet_test.py  05_install_for_install_test.py  06_simple_applet_test.py  07_delete_test.py
tests/uicc/: 01_scp80_test.py  02_cold_reset_test.py  06_delete_test.py
